--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,4 +11,6 @@ jobs:
       - run: echo "CE"
       - name: Check previous release
         run: |
+          pwd
+          ls -l
           .github/checkPreviousChannelRelease.sh $MODULE_SOURCE_NAME ce $RELEASE_CHANNEL $MODULES_MODULE_TAG
